[gd_scene load_steps=5 format=2]

[ext_resource path="res://themes/guiTheme.tres" type="Theme" id=1]
[ext_resource path="res://ui/battle/styles/ItemDynamicFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://scripts/battle/ui/EquippedItemUI.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=1]
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.396078, 0.372549, 0.372549, 1 )
shadow_size = 1
shadow_offset = Vector2( 1, 1 )

[node name="Items" type="PanelContainer"]
margin_top = 84.0
margin_right = 186.0
margin_bottom = 108.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="Bg" type="ColorRect" parent="."]
visible = false
margin_left = 7.0
margin_top = 7.0
margin_right = 179.0
margin_bottom = 27.0
mouse_filter = 2
color = Color( 0.203922, 0.156863, 0.156863, 1 )

[node name="DescLabel" type="Label" parent="."]
margin_left = 2.0
margin_top = 3.0
margin_right = 184.0
margin_bottom = 21.0
theme = ExtResource( 1 )
custom_fonts/font = ExtResource( 2 )
text = "Basic Sword"
align = 1

[connection signal="mouse_entered" from="." to="." method="_on_Items_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Items_mouse_exited"]
